
2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: removed all Makefiles and configure script generated by
	  autoconf and automake from version control - use build_aux/bootstrap
	* Makefile.am: ensure correct time stamps for make dist
	* configure.ac: adjusted GMP version checks,
	  substitute COB_HAS_64_BIT_POINTER for use in testsuite

2017-08-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* create_win_dist.sh: remove ".in" suffix from template files config.h.in
	  and defaults.h.in in generated win dist package

2017-07-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: version bump to 2.3-dev

2017-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac [_BSD_SOURCE]: set COB_HAS_UTC_OFFSET to "yes" if C compiler
	  defines _BSD_SOURCE as we can access the offset directly in this case
	* configure.ac: output detailed version information for BDB, if available

2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: added --enable-code-coverage and test for code-coverage
	  tools if enabled by AX_CODE_COVERAGE,
	  always check if user specified optimization options in CFLAGS,
	  not only when --enable-debug is active,
	  compile with -O0 for both --enable-debug and --enable-code-coverage
	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
	  which provides new target `make check-code-coverage`

2017-06-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added .PHONY to correctly declare logical targets that
	  always have to be executed and don't result in a file,
	  define prerequisites to fix parallel builds

2017-05-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: change in library check for BDB - prefer library
	  with version number from db.h included (-ldb-6.1 over -ldb) to
	  prevent errors on system with multiple versions that linked