@@ -41,7 +41,7 @@ EXTRA_DIST = pplex.l scanner.l ppparse.h parser.h
 CODE_COVERAGE_BRANCH_COVERAGE=1
 CODE_COVERAGE_LCOV_OPTIONS =  --no-external
 
-cobc.1: cobc.c config.def flag.def warning.def $(top_srcdir)/configure.ac | $(COBC)
+cobc.1: cobc.c config.def flag.def warning.def $(top_srcdir)/configure.ac | cobc$(EXEEXT)
 	$(HELP2MAN) --output=$@ --info-page=$(PACKAGE) $(COBC)
 
 .l.c:
