@@ -40,7 +40,7 @@ pkginclude_HEADERS = common.h cobgetopt.h exception.def
 CODE_COVERAGE_BRANCH_COVERAGE=1
 CODE_COVERAGE_LCOV_OPTIONS =  --no-external
 
-#libcob.3: $(top_srcdir)/bin/cobcrun.c $(top_srcdir)/configure.ac | $(COBCRUN)
+#libcob.3: $(top_srcdir)/bin/cobcrun.c $(top_srcdir)/configure.ac | cobcrun$(EXEEXT)
 #	$(HELP2MAN) --output=$@ --info-page=$(PACKAGE) $(COBCRUN) -specialflag
 
 install-data-hook:
