@@ -1,4 +1,9 @@
 
+2017-10-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* bin/Makefile.am, cobcrun/Makefile.am: fixed bug #448 parallel build
+	  breaking by matching prerequisites 100% (pointed out by Nick Bowler)
+
 2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* general: removed all Makefiles and configure script generated by
